set(PROG_APP prog)

file(GLOB_RECURSE PROG_SRC
	${CMAKE_CURRENT_SOURCE_DIR}/*.s
	${CMAKE_CURRENT_SOURCE_DIR}/*.c
)

add_executable(${PROG_APP} ${PROG_SRC})

target_include_directories(${PROG_APP} PRIVATE
	${CMAKE_CURRENT_SOURCE_DIR}/Core/Inc
	${CMAKE_CURRENT_SOURCE_DIR}/Drivers/STM32F1xx_HAL_Driver/Inc
	${CMAKE_CURRENT_SOURCE_DIR}/Drivers/STM32F1xx_HAL_Driver/Inc/Legacy
	${CMAKE_CURRENT_SOURCE_DIR}/Drivers/CMSIS/Device/ST/STM32F1xx/Include
	${CMAKE_CURRENT_SOURCE_DIR}/Drivers/CMSIS/Include
)

target_compile_definitions(${PROG_APP} PRIVATE
	USE_FULL_LL_DRIVER
	USE_HAL_DRIVER
	STM32F103xB
)

target_link_options(${PROG_APP} PRIVATE
	-T${CMAKE_CURRENT_SOURCE_DIR}/STM32F103C8Tx.ld.ld
)

set(MCU_OUTPUT_FILENAME ${PROJECT_NAME}_${CMAKE_PROJECT_VERSION})
add_custom_command(TARGET ${PROG_APP}
	POST_BUILD
	WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
	COMMAND ${CMAKE_OBJCOPY} ARGS -O ihex -I elf32-littlearm ${PROG_APP} ${MCU_OUTPUT_FILENAME}.hex
)